--- a/aboutme.html
+++ b/aboutme.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+  <title> About Me: Niki Shakouri</title>
+  </head>
+  <body>
+    
+  
+    <h1>Biography</h1>
+    <p>I am an upcoming senior at Independence High School.</p>.
+    <p>Likes: Running, traveling, 
