--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,10 @@
   <title> About Me: Niki Shakouri</title>
   </head>
   <body>
-    
-  
+    <hr>
     <h1>Biography</h1>
     <p>I am an upcoming senior at Independence High School.</p>.
-    <p>Likes: Running, traveling, 
+    <p>Likes: Running, traveling, binge watching shows, and shopping.</p>.
+    <p>Dislikes: Animals</p>.
+    <p>Fun Fact: I have visited 3 continents.</p>.
+        
