--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,11 @@
   </head>
   <body>
     <h1>Biography</h1>
-    <p>I am an upcoming senior at Independence High School.</p>.
-    <p>Likes: Running, traveling, binge watching shows, and shopping.</p>.
-    <p>Dislikes: Animals</p>.
-    <p>Fun Fact: I have visited 3 continents.</p>.
+    <ul> 
+      <li>I am an upcoming senior at Independence High School.<li>
+      <li>Likes: Running, traveling, bing watching shows, and shopping.<li>
+    <li>Dislikes: Animals
+    <li>Fun Fact: I have visited 3 continents.<li>
+    </ul>
   </body>
 </html>
