--- a/aboutme.html
+++ b/aboutme.html
@@ -6,10 +6,10 @@
   <body>
     <h1>Biography</h1>
     <ul> 
-      <li>I am an upcoming senior at Independence High School.<li>
-      <li>Likes: Running, traveling, bing watching shows, and shopping.<li>
-    <li>Dislikes: Animals
-    <li>Fun Fact: I have visited 3 continents.<li>
+      <li>I am an upcoming senior at Independence High School.</li>
+      <li>Likes: Running, traveling, bing watching shows, and shopping.</li>
+      <li>Dislikes: Animals.</li>
+    <li>Fun Fact: I have visited 3 continents.</li>
     </ul>
   </body>
 </html>
