--- a/aboutme.html
+++ b/aboutme.html
@@ -5,11 +5,12 @@
   </head>
   <body>
     <h1>Biography</h1>
-    <ul> 
+    <img src="https://www.google.com/search?q=art+of+girl+image&source=lnms&tbm=isch&sa=X&sqi=2&ved=0ahUKEwjnspHxvNzUAhVBrlQKHaG4BukQ_AUIBigB&biw=1440&bih=826#tbm=isch&q=girl+emoji+image&imgdii=K4cX-UEYZOwYiM:&imgrc=rjWN4js7kYSIaM:" alt="girl" style="width:128px;height:128px;">
+    <ul>
       <li>I am an upcoming senior at Independence High School.</li>
       <li>Likes: Running, traveling, bing watching shows, and shopping.</li>
       <li>Dislikes: Animals.</li>
-    <li>Fun Fact: I have visited 3 continents.</li>
+      <li>Fun Fact: I have visited 3 continents.</li>
     </ul>
   </body>
 </html>
