--- a/aboutme.html
+++ b/aboutme.html
@@ -4,8 +4,8 @@
   <title> About Me: Niki Shakouri</title>
   </head>
   <body>
-    <h1>Biography</h1>
-    <img src="https://www.google.com/search?q=art+of+girl+image&source=lnms&tbm=isch&sa=X&sqi=2&ved=0ahUKEwjnspHxvNzUAhVBrlQKHaG4BukQ_AUIBigB&biw=1440&bih=826#tbm=isch&q=girl+emoji+image&imgdii=K4cX-UEYZOwYiM:&imgrc=rjWN4js7kYSIaM:" alt="girl" style="width:128px;height:128px;">
+    <h1 style="color:purple;">Biography</h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;">
     <ul>
       <li>I am an upcoming senior at Independence High School.</li>
       <li>Likes: Running, traveling, bing watching shows, and shopping.</li>
