--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
   <title> About Me: Niki Shakouri</title>
   </head>
-  <body>
+  <body style="background-color:aqua;">
     <h1 style="color:purple;">Biography</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;">
     <ul>
