--- a/aboutme.html
+++ b/aboutme.html
@@ -3,10 +3,10 @@
   <head>
   <title> About Me: Niki Shakouri</title>
   </head>
-  <body style="background-color:aliceblue;">
-    <h1 style="color:cadetblue;">Biography</h1>
+  <body style="background-color:aliceblue;font-size:300%;">
+    <h1 style="color:cadetblue;font-family:ariel;">Biography</h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;">
-    <ul style="color:cadetblue;">
+    <ul style="color:cadetblue;font-family:ariel;font-size:200%;">
       <li>I am an upcoming senior at Independence High School.</li>
       <li>Likes: Running, traveling, bing watching shows, and shopping.</li>
       <li>Dislikes: Animals.</li>
