--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
   <title> About Me: Niki Shakouri</title>
   </head>
   <body style="background-color:aliceblue;font-size:300%;">
-    <h1 style="color:cadetblue;font-family:ariel;">Biography</h1>
+    <h1 style="color:cadetblue;font-family:ariel;text-align:center;"><b>Biography</b></h1>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;">
     <ul style="color:cadetblue;font-family:ariel;font-size:200%;">
       <li>I am an upcoming senior at Independence High School.</li>
