--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:200%;"><b>Biography</b></h1>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;"> </center>
-    <ul style="color:cadetblue;font-family:ariel;font-size:100%;">
+    <ul style="color:cadetblue;font-family:ariel;font-size:100%;text-align:center;">
       <li>I am an upcoming senior at Independence High School.</li>
       <li>Likes: Running, traveling, bing watching shows, and shopping.</li>
       <li>Dislikes: Animals.</li>
