--- a/aboutme.html
+++ b/aboutme.html
@@ -6,10 +6,10 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;"> </center>
-    <pre style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
-      <p>I am an upcoming senior at Independence High School.
+    <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+           I am an upcoming senior at Independence High School.
       Likes: Running, traveling, bing watching shows, and shopping.
-                   Dislikes: Animals.
+                     Dislikes: Animals.
              Fun Fact: I have visited 3 continents.</p>
     </pre>
   </body>
