--- a/aboutme.html
+++ b/aboutme.html
@@ -7,10 +7,11 @@
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;"> </center>
     <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
-           I am an upcoming senior at Independence High School.
-      Likes: Running, traveling, bing watching shows, and shopping.
-                     Dislikes: Animals.
+           I am an upcoming senior at Independence High School. 
+       Likes: I enjoy running, traveling to different places, binge watching shows, and shopping.
+                       Dislikes: I dislike animals.
              Fun Fact: I have visited 3 continents.</p>
     </pre>
+    <a href="www.google.com" /a>
   </body>
 </html>
