--- a/aboutme.html
+++ b/aboutme.html
@@ -12,6 +12,8 @@
                        Dislikes: I dislike animals.
              Fun Fact: I have visited 3 continents.</p>
     </pre>
-    <a href="www.google.com" /a>
+    <a href="www.google.com">Favorite Webpage</a>
+    <h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Work</b><h2>
+    <a href="https://scratch.mit.edu/projects/167011188/">Treasure Dive Game Link</a>
   </body>
 </html>
