--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
                        Dislikes: I dislike animals.
              Fun Fact: I have visited 3 continents.</p>
     </pre>
-    <a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Favorite Webpage Link</a>
+    <a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Favorite Webpage</a>
     <h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Work</b><h2>
     <a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Treasure Dive Game Link</a>
   </body>
