--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
   </head>
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>
-    <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:128px;height:128px;"> </center>
+    <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:140px;height:128px;"> </center>
     <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
            I am an upcoming senior at Independence High School. 
        Likes: I enjoy running, traveling to different places, binge watching shows, and shopping.
@@ -15,5 +15,6 @@
     <a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Favorite Webpage</a>
     <h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Work</b><h2>
     <a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Treasure Dive Game Link</a>
+      <center> <img src="Screen Shot 2017-06-27 at 8.47.01 AM.png" alt="Treasure Dive" style="width:140px;height:128px;"></center>
   </body>
 </html>
