--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,6 @@
     <a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Favorite Webpage</a>
     <h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Work</b><h2>
     <a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Treasure Dive Game Link</a>
-      <center> <img src="Screen Shot 2017-06-27 at 8.47.01 AM.png" alt="Treasure Dive" style="width:140px;height:128px;"></center>
+      <center> <img src="sidescroller.png" style="width:140px;height:128px;"></center>
   </body>
 </html>
