--- a/aboutme.html
+++ b/aboutme.html
@@ -15,6 +15,6 @@
     <center><a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
     <h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Work</b><h2>
       <center> <img src="sidescroller.png" style="width:160px;height:140px;"></center>
-      <a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a>
+      <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
   </body>
 </html>
