--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
              Fun Fact: I have visited 3 continents.</p>
     </pre>
     <center><a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
-    <h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Work</b><h2>
+    <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Work<h2></b>
       <center> <img src="file:///Users/nikishakouri/Desktop/sidescroller.jpg" style="width:160px;height:140px;"></center>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
   </body>
