--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
     </pre>
     <center><a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Work<h2></b>
-      <center> <img src="file:///Users/nikishakouri/Desktop/sidescroller.jpg" style="width:160px;height:140px;"></center>
+      <center> <img src="file:///Users/nikishakouri/Desktop/Screen%20Shot%202017-06-27%20at%208.44.52%20AM.png" style="width:160px;height:140px;"></center>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
   </body>
 </html>
