--- a/aboutme.html
+++ b/aboutme.html
@@ -12,9 +12,9 @@
                        Dislikes: I dislike animals.
              Fun Fact: I have visited 3 continents.</p>
     </pre>
-    <center><a href="www.google.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
+    <center><a href="www.google.com" style="color:navyblue;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Work<h2></b>
       <center> <img src="file:///Users/nikishakouri/Desktop/Screen%20Shot%202017-06-27%20at%208.44.52%20AM.png" alt="Treasure Dive" style="width:160px;height:140px;"></center>
-      <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
+      <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
   </body>
 </html>
