--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
                        Dislikes: I dislike animals.
              Fun Fact: I have visited 3 continents.</p>
     </pre>
-    <center><a href="www.google.com" style="color:navyblue;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
+    <center><a href="www.google.com" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Work<h2></b>
       <center> <img src="Screen Shot 2017-06-27 at 8.44.52   AM.png" alt="Treasure Dive" style="color:navyblue;width:160px;height:140px;"></center>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
