--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
     </pre>
     <center><a href="www.google.com" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage</a></center>
     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Work<h2></b>
-      <center> <img src="Shttps://lh3.googleusercontent.com/4LiQpbSS5YS1JtZq8sTojZM8-ZJmT0teqnMdWPsAZEpBzTPWBIXfX3F4Re62XbA8-qPV=s170" alt="Treasure Dive" style="color:navyblue;width:160px;height:140px;"></center>
+      <center> <img src="Screen Shot 2017-06-27 at 10.08.13  AM (1).png" alt="Treasure Dive" style="color:navyblue;width:160px;height:140px;"></center>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
   </body>
 </html>
