--- a/aboutme.html
+++ b/aboutme.html
@@ -17,6 +17,6 @@
       <center> <img src="treasuredive.png" alt="Treasure Dive" style="color:navyblue;width:160px;height:140px;"></center>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:100%;">Treasure Dive Game Link</a></center>
       <center><img src="recolored.jpg" style="color:navyblue;width:160px;height:140px;"></center>
-      <center><img srce="LED.JPG" style="color:navyblue;width:160px;height:140px;"></center>
+      <center><img srce="LED.jpg" style="color:navyblue;width:160px;height:140px;"></center>
   </body>
 </html>
