--- a/aboutme.html
+++ b/aboutme.html
@@ -14,7 +14,7 @@
     </pre>
     <center><a href="www.youtube.com" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage: Youtube</a></center>
     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects<h2></b>
-      <center> <img src="treasuredive" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center>
+      <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:60%;">Treasure Dive Game Link</a></center>
       <center><img src="recolored.jpg" style="color:navyblue;width:350px;height:200px;"></center>
       <center><img srce="LED.jpg" style="color:navyblue;width:350px;height:200px;"></center>
