--- a/aboutme.html
+++ b/aboutme.html
@@ -11,14 +11,14 @@
        Likes: I enjoy running, traveling to different places, binge watching shows, and shopping.
                        Dislikes: I dislike animals.
              Fun Fact: I have visited 3 continents.</p>
-    <tr>
+   <tr>
     </pre>
     <center><a href="www.youtube.com" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage: Youtube</a></center>
     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects<h2></b>
-      <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center>
+      <th><center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center></th>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:60%;">Treasure Dive Game Link</a></center>
-      <center><img src="recolored.jpg" style="color:navyblue;width:350px;height:200px;"></center>
-      <center><img srce="LED.jpg" style="color:navyblue;width:350px;height:200px;"></center>
-      </tr>
+      <th><center><img src="recolored.jpg" style="color:navyblue;width:350px;height:200px;"></center></th>
+      <th><center><img srce="LED.jpg" style="color:navyblue;width:350px;height:200px;"></center></th>
+    </tr>
   </body>
 </html>
