--- a/aboutme.html
+++ b/aboutme.html
@@ -18,7 +18,7 @@
       <th><center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center></th>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:60%;">Treasure Dive Game Link</a></center>
       <th><center><img src="recolored.jpg" style="color:navyblue;width:350px;height:200px;"></center></th>
-      <th><center><img srce="LED.jpg" style="color:navyblue;width:350px;height:200px;"></center></th>
+      <th><center><img srce="file:///Users/nikishakouri/Desktop/LED.jpg" style="color:navyblue;width:350px;height:200px;"></center></th>
       </tr>
   </body>
 </html>
