--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
       <th><center><img src="recolored.jpg" style="width:350px;height:200px;"></center></th>
       <th><center><img src="LED.jpg" style="width:350px;height:200px;"></center></th>
      </tr>
-     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info<h2></b>
+     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info<h2></b></h2>
        <pre>
        <center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">LinkedIn Profile</a></center>
        <center>
