--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
        <pre>
        <center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">LinkedIn Profile</a></center>
        <center>
-    </pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+   <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
            Email: nshakouri@yahoo.com</p>
     </pre>
   </body>
