--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>
     <script>
-    <button style="text-align:center;" onclick="youtube.com">Biography</button>
+    <button style="text-align:center;" onclick="www.youtube.com">Biography</button>
     <button style="text-align:center;" onclick=".........">Projects</button>
     <button style="text-align:center;" onclick=".........">Contact</button>
       
