--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,10 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>
     <script>
-    <button style="text-align:center;" onclick="www.youtube.com">Biography</button>
-    <button style="text-align:center;" onclick=".........">Projects</button>
-    <button style="text-align:center;" onclick=".........">Contact</button>
+ <div
+    <button class="tablinks"  onclick="window.location.href='www.youtube.com';" id="mybutton">Biography</button>
+    <button onclick=".........">Projects</button>
+    <button s onclick=".........">Contact</button>
       
       
    
