--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>
     <script>
- <div
+ <div class="tab"></center>
     <button class="tablinks"  onclick="window.location.href='www.youtube.com';" id="mybutton">Biography</button>
     <button onclick=".........">Projects</button>
     <button s onclick=".........">Contact</button>
