--- a/aboutme.html
+++ b/aboutme.html
@@ -10,6 +10,7 @@
     <button class="tablinks"  onclick="window.location.href='www.youtube.com';" id="mybutton">Biography</button>
     <button onclick=".........">Projects</button>
     <button s onclick=".........">Contact</button>
+      </div></center>
       
       
    
