--- a/aboutme.html
+++ b/aboutme.html
@@ -23,14 +23,14 @@
              Fun Fact: I have visited 3 continents.</p>
     </pre>
     <center><a href="www.youtube.com" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage: Youtube</a></center>
-    <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects<h2></b>
+    <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects<h1></b>
      <tr>
       <th><center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center></th>
       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:60%;">Treasure Dive Game Link</a></center>
       <th><center><img src="recolored.jpg" style="width:350px;height:200px;"></center></th>
       <th><center><img src="LED.jpg" style="width:350px;height:200px;"></center></th>
      </tr>
-     <b><h2 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info<h2></b></h2>
+     <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info</b></h1>
        <pre>
        <center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">LinkedIn Profile</a></center>
        <center>
