--- a/aboutme.html
+++ b/aboutme.html
@@ -31,9 +31,7 @@
       <th><center><img src="LED.jpg" style="width:350px;height:200px;"></center></th>
      </tr>
      <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info</b></h1>
-       <pre>
-       <center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">LinkedIn Profile</a></center>
-       <center>
+       <pre><p><center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">LinkedIn Profile</a></center>
    <center><p style="color:cadetblue;font-family:ariel;font-size:150%;">
    Email: nshakouri@yahoo.com</p></center>
     </pre>
