--- a/aboutme.html
+++ b/aboutme.html
@@ -5,8 +5,8 @@
   </head>
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>=
- <div class="tab"><center>
-    <button class="tablinks" onclick="window.location.href='www.youtube.com';" id="myButton">Biography</button>
+    <center>
+    <button class="tablinks" onclick="window.location.href='http://www.youtube.com'" id="myButton">Biography</button>
     <button onclick=".........">Projects</button>
     <button s onclick=".........">Contact</button>
       </div></center>
