--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,7 @@
     <button class="tablinks" onclick="window.location.href='http://www.youtube.com'" id="myButton">Biography</button>
     <button onclick=".........">Projects</button>
     <button s onclick=".........">Contact</button>
-      </div></center>
+     </center>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
     <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
            I am an upcoming senior at Independence High School. 
