--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,8 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>=
     <center>
-    <button class="tablinks" onclick="window.location.href='http://www.youtube.com'" id="myButton">Biography</button>
-    <button onclick=".........">Projects</button>
+    <button class="tablinks" onclick="window.scrollTo(500,)" id="myButton">Biography</button>
+    <button onclick=".........">Projects</button>"window.location.href='http://www.youtube.com'"
     <button onclick=".........">Contact</button>
      </center>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
