--- a/aboutme.html
+++ b/aboutme.html
@@ -6,9 +6,14 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>=
     <center>
-    <button class="tablinks" onclick="window.scrollTo(500,)" id="myButton">Biography</button>
-    <button onclick=".........">Projects</button>"window.location.href='http://www.youtube.com'"
+    <button class="tablinks" onclick="ScrollWin()" id="myButton">Biography</button>
+    <button onclick="window.location.href='http://www.youtube.com'">Projects</button>
     <button onclick=".........">Contact</button>
+      <script>
+        function ScrollWin() {
+          window.scrollTo (500,0);
+        }
+              </script>
      </center>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
     <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
