--- a/aboutme.html
+++ b/aboutme.html
@@ -7,11 +7,11 @@
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>=
     <center>
     <button class="tablinks" onclick="ScrollWin()" id="myButton">Biography</button>
-    <button onclick="window.location.href='http://www.youtube.com'">Projects</button>
-    <button onclick=".........">Contact</button>
+    <button class="tablinks" onclick="window.location.href='http://www.youtube.com'">Projects</button>
+    <button class="tablinks" onclick=".........">Contact</button>
       <script>
         function ScrollWin() {
-          window.scrollTo (500,0);
+          window.scrollTo (500, 0);
         }
               </script>
      </center>
