--- a/aboutme.html
+++ b/aboutme.html
@@ -6,12 +6,16 @@
   <body style="background-color:aliceblue;">
     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>=
     <center>
-    <button class="tablinks" onclick="ScrollWin()" id="myButton">Biography</button>
-    <button class="tablinks" onclick="window.location.href='http://www.youtube.com'">Projects</button>
-    <button class="tablinks" onclick=".........">Contact</button>
+    <button class="tablinks" onclick="ScrollWin()">Projects</button>
+    <button class="tablinks" onclick="ScrollFor()">Contact</button>
       <script>
         function ScrollWin() {
-          window.scrollTo (500, 0);
+          window.scrollTo (0, 500);
+        }
+              </script>
+       <script>
+        function ScrollFor() {
+          window.scrollTo (0, 750);
         }
               </script>
      </center>
