--- a/aboutme.html
+++ b/aboutme.html
@@ -4,18 +4,18 @@
   <title> About Me: Niki Shakouri</title>
   </head>
   <body style="background-color:aliceblue;">
-    <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>=
+    <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Biography</b></h1>
     <center>
     <button class="tablinks" onclick="ScrollWin()">Projects</button>
-    <button class="tablinks" onclick="ScrollFor()">Contact</button>
+    <button class="tablinks" onclick="ScrollFor()">Contact Info</button>
       <script>
         function ScrollWin() {
-          window.scrollTo (0, 600);
+          window.scrollTo (0, 550);
         }
               </script>
        <script>
         function ScrollFor() {
-          window.scrollTo (0, 1000);
+          window.scrollTo (0, 1700);
         }
               </script>
      </center>
@@ -34,7 +34,7 @@
       <th><center><img src="recolored.jpg" style="width:350px;height:200px;"></center></th>
       <th><center><img src="LED.jpg" style="width:350px;height:200px;"></center></th>
      </tr>
-     <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info</b></h1>
+     <h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;"><b>Contact Info</b></h1>
        <pre><p><center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">LinkedIn Profile</a></center>
    <center><p style="color:cadetblue;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</p></center>
     </pre>
