--- a/aboutme.html
+++ b/aboutme.html
@@ -30,15 +30,15 @@
     <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects<h1></b>
      <tr>
       <th><center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center></th>
-      <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
-        "Treasure Dive" was a project my team and I created in class, check it out at the link below. The game combines sidescrolling techniques with the challenge of being a diver on a search to find treasure, avoiding aquatic obsticles in his path.</p>
+      <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+        "Treasure Dive" was a project my team and I created in class, check it out at the link below. The game combines sidescrolling techniques with the challenge of being a diver on a search to find treasure, avoiding aquatic obsticles in his path.</p></pre>
        <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:60%;">Treasure Dive Game Link</a></center>
       <th><center><img src="recolored.jpg" style="width:350px;height:200px;"></center></th>
-       <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
-         Our group created a recolored picture, a project that allowed us to experiment with pixels.</p>
+       <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+         Our group created a recolored picture, a project that allowed us to experiment with pixels.</p></pre>
       <th><center><img src="LED.jpg" style="width:350px;height:200px;"></center></th>
-       <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
-         Through the use of arduino and a basic knowledge of circuits, my team and I were able to complete a circuit that controlled LED lights, causing them to simultaneously turn on.</p>
+      <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+         Through the use of arduino and a basic knowledge of circuits, my team and I were able to complete a circuit that controlled LED lights, causing them to simultaneously turn on.</p></pre>
      </tr>
      <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info</h1></b>
        <pre><p><center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;font-size:100%;">LinkedIn Profile</a></center></p>
