--- a/aboutme.html
+++ b/aboutme.html
@@ -29,14 +29,14 @@
     <center><a href="www.youtube.com" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage: Youtube</a></center>
     <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects<h1></b>
      <tr>
-      <th><center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center></th>
+      <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center>
       <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
         "Treasure Dive" was a project my team and I created in class, check it out at the link below. The game combines sidescrolling techniques with the challenge of being a diver on a search to find treasure, avoiding aquatic obstacles in his path.</p>
        <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:60%;">Treasure Dive Game Link</a></center>
-      <th><center><img src="recolored.jpg" style="width:350px;height:200px;"></center></th>
+      <center><img src="recolored.jpg" style="width:350px;height:200px;"></center>
        <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
          Our group created a recolored picture, a project that allowed us to experiment with pixels.</p>
-      <th><center><img src="LED.jpg" style="width:350px;height:200px;"></center></th>
+      <center><img src="LED.jpg" style="width:350px;height:200px;"></center>
      <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
          Through the use of arduino and a basic knowledge of circuits, my team and I were able to complete a circuit that controlled LED lights, causing them to simultaneously turn on.</p>
      </tr>
