--- a/aboutme.html
+++ b/aboutme.html
@@ -27,7 +27,7 @@
              Fun Fact: I have visited 3 continents.</p>
     </pre>
     <center><a href="www.youtube.com" style="color:purple;font-family:ariel;text-align:center;font-size:100%;">Favorite Webpage: Youtube</a></center>
-    <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects<h1></b>
+    <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects</h1></b>
      <tr>
       <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center>
       <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
