--- a/aboutme.html
+++ b/aboutme.html
@@ -41,8 +41,8 @@
          Through the use of arduino and a basic knowledge of circuits, my team and I were able to complete a circuit that controlled LED lights, causing them to simultaneously turn on.</p>
      </tr>
      <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info</h1></b>
-       <pre><p><center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;font-size:100%;">LinkedIn Profile</a></center></p>
-   <center><p style="color:cadetblue;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</p></center>
+       <pre><p><center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:purple;font-family:ariel;font-size:100%;">LinkedIn Profile</a>
+       <a style="color:cadetblue;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</center></p>
     </pre>
   </body>
 </html>
