--- a/aboutme.html
+++ b/aboutme.html
@@ -32,7 +32,7 @@
       <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center>
       <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
         "Treasure Dive" was a project my team and I created in class, check it out at the link below. The game combines sidescrolling techniques with the challenge of being a diver on a search to find treasure, avoiding aquatic obstacles in his path.</p>
-       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:navyblue;font-family:ariel;text-align:center;font-size:60%;">Treasure Dive Game Link</a></center>
+       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Treasure Dive Game Link</a></center>
       <center><img src="recolored.jpg" style="width:350px;height:200px;"></center>
        <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
          Our group created a recolored picture, a project that allowed us to experiment with pixels.</p>
