--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
   <title> About Me: Niki Shakouri</title>
   </head>
   <body style="background-color:aliceblue;">
-    <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
+    <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
     <center>
     <button class="tablinks" onclick="ScrollWin()">Projects</button>
     <button class="tablinks" onclick="ScrollFor()">Contact Info</button>
@@ -20,29 +20,29 @@
               </script>
      </center>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
-    <pre><p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+    <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
            I am an upcoming senior at Independence High School. 
        Likes: I enjoy running, traveling to different places, binge watching shows, and shopping.
                        Dislikes: I dislike animals.
              Fun Fact: I have visited 3 continents.</p>
     </pre>
-    <center><a href="www.youtube.com" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Favorite Webpage: Youtube</a></center>
-    <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Projects</h1></b>
+    <center><a href="www.youtube.com" style="color:white;font-family:ariel;text-align:center;font-size:150%;">Favorite Webpage: Youtube</a></center>
+    <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Projects</h1></b>
      <tr>
-      <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:navyblue;width:350px;height:200px;"></center>
-      <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+      <center> <img src="TreasureDive.png" alt="Treasure Dive" style="color:white;width:350px;height:200px;"></center>
+      <p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
         "Treasure Dive" was a project my team and I created in class, check it out at the link below. The game combines sidescrolling techniques with the challenge of being a diver on a search to find treasure, avoiding aquatic obstacles in his path.</p>
-       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:cadetblue;font-family:ariel;text-align:center;font-size:150%;">Treasure Dive Game Link</a></center>
+       <center><a href="https://scratch.mit.edu/projects/167011188/" style="color:white;font-family:ariel;text-align:center;font-size:150%;">Treasure Dive Game Link</a></center>
       <center><img src="recolored.jpg" style="width:350px;height:200px;"></center>
-       <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+       <p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
          Our group created a recolored picture, a project that allowed us to experiment with pixels.</p>
       <center><img src="LED.jpg" style="width:350px;height:200px;"></center>
-     <p style="color:cadetblue;font-family:ariel;font-size:150%;text-align:center;">
+     <p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
          Through the use of arduino and a basic knowledge of circuits, my team and I were able to complete a circuit that controlled LED lights, causing them to simultaneously turn on.</p>
      </tr>
-     <b><h1 style="color:cadetblue;font-family:ariel;text-align:center;font-size:250%;">Contact Info</h1></b>
-       <pre><p><center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:cadetblue;font-family:ariel;font-size:150%;">LinkedIn Profile</a></center>
-      <center><a style="color:cadetblue;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</center></p>
+     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Contact Info</h1></b>
+       <pre><p><center><a href="linkedin.com/in/niki-shakouri-5b7871141" style="color:white;font-family:ariel;font-size:150%;">LinkedIn Profile</a></center>
+      <center><a style="color:white;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</center></p>
     </pre>
   </body>
 </html>
