--- a/aboutme.html
+++ b/aboutme.html
@@ -18,6 +18,11 @@
           window.scrollTo (0, 1700);
         }
               </script>
+      <script>
+        function Background() {
+          document.body.style.background = "#f3f3f3 url('img_tree.png')
+        }
+      </script>
      </center>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
     <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
