--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
   <title> About Me: Niki Shakouri</title>
   </head>
-  <body style="background-color:aliceblue;">
+  // <body style="background-color:aliceblue;">
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
     <center>
     <button class="tablinks" onclick="ScrollWin()">Projects</button>
@@ -20,7 +20,7 @@
               </script>
       <script>
         function Background() {
-          document.body.style.background = "#f3f3f3 url('img_tree.png')
+          document.body.style.background = "#f3f3f3 url('Sunset.jpeg')
         }
       </script>
      </center>
