--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,7 @@
   <head>
   <title> About Me: Niki Shakouri</title>
   </head>
-  // <body style="background-color:aliceblue;">
+   <body>
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
     <center>
     <button class="tablinks" onclick="ScrollWin()">Projects</button>
