--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
               </script>
       <script>
         function Background() {
-          document.body.style.background = "#f3f3f3 url('Sunset.jpeg')
+          document.body.style.backgroundImage = "url('Sunset.jpeg')";
         }
       </script>
      </center>
