--- a/aboutme.html
+++ b/aboutme.html
@@ -20,6 +20,7 @@
               </script>
       <script>
         function Background() {
+          document.body.style.backgroundColor = "#f3f3f3";
           document.body.style.backgroundImage = "url('Sunset.jpeg')";
         }
       </script>
