--- a/aboutme.html
+++ b/aboutme.html
@@ -18,11 +18,14 @@
           window.scrollTo (0, 1700);
         }
               </script>
-      <script>
-        function Background() {
-          document.body.style.backgroundImage = "url('Sunset.jpeg')";
-        }
-      </script>
+     <style>
+       body {
+         background: url(Sunset.jpeg) no-repeat center center fixed;
+         background-size: cover;
+         webkit-background-size: cover;
+         -moz-background-size: cover;
+         o-background-size; cover;
+       }
      </center>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
     <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
