--- a/aboutme.html
+++ b/aboutme.html
@@ -24,7 +24,7 @@
          background-size: cover;
          webkit-background-size: cover;
          -moz-background-size: cover;
-         o-background-size; cover;
+         -o-background-size; cover;
        }
      </center>
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
