--- a/aboutme.html
+++ b/aboutme.html
@@ -20,7 +20,7 @@
               </script>
      <style>
        body {
-         background: url(Sunset.jpeg) no-repeat center center fixed;
+         background: url(sunset2.jpg) no-repeat center center fixed;
          background-size: cover;
          webkit-background-size: cover;
          -moz-background-size: cover;
