--- a/aboutme.html
+++ b/aboutme.html
@@ -8,6 +8,7 @@
     <center>
     <button class="tablinks" onclick="ScrollWin()">Projects</button>
     <button class="tablinks" onclick="ScrollFor()">Contact Info</button>
+      <center>
       <script>
         function ScrollWin() {
           window.scrollTo (0, 525);
@@ -60,7 +61,7 @@
     background-color: #4CAF50;
     color: white;
 }
-     </center>
+     
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
     <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
            I am an upcoming senior at Independence High School. 
