--- a/aboutme.html
+++ b/aboutme.html
@@ -34,7 +34,8 @@
   <a href="#contact">Contact</a>
   <a href="#about">About</a>
 </div>
-     
+<style>
+   <div> 
 .topnav {
     background-color: #333;
     overflow: hidden;
@@ -61,6 +62,8 @@
     background-color: #4CAF50;
     color: white;
 }
+  </div>
+        </style>
      
     <center> <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRVgxidMtLNLgXXUe_FqfJMJrIjzX9LA4DrZfrqCdQqq5AEJy5p" alt="girl" style="width:160px;height:140px;"> </center>
     <pre><p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
