--- a/aboutme.html
+++ b/aboutme.html
@@ -38,6 +38,7 @@
     color: white;
 }
   </div>
+  <div>
    body {
          background: url(sunset2.jpg) no-repeat center center fixed;
          background-size: cover;
@@ -45,6 +46,7 @@
          -moz-background-size: cover;
          -o-background-size; cover;
        }
+  </div>
         </style>
   </head>
    <body>
