--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,9 @@
   <title> About Me: Niki Shakouri</title>
      <div class="topnav" id="myTopnav">
   <a href="#home">Home</a>
-  <a href="#news">News</a>
-  <a href="#contact">Contact</a>
-  <a href="#about">About</a>
+  <a href="#biography">Biography</a>
+  <a href="#projects">Projects</a>
+  <a href="#ContactMe">Contact Me</a>
 </div>
 <style>
    <div> 
