--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     
   <title> About Me: Niki Shakouri</title>
      <div class="topnav" id="myTopnav">
-  <a href="#home">Home</a>
+  <a onclick = "ScrollWin()">Home</a>
   <a href="#biography">Biography</a>
   <a href="#projects">Projects</a>
   <a href="#ContactMe">Contact Me</a>
@@ -48,6 +48,7 @@
         </style>
   </head>
    <body>
+     
     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Biography</h1></b>
     <center>
     <button class="tablinks" onclick="ScrollWin()">Projects</button>
