--- a/aboutme.html
+++ b/aboutme.html
@@ -4,10 +4,10 @@
     
   <title> About Me: Niki Shakouri</title>
      <div class="topnav" id="myTopnav">
-  <a onclick = "ScrollWin()">Home</a>
+  <a>Home</a>
   <a href="#biography">Biography</a>
-  <a href="#projects">Projects</a>
-  <a href="#ContactMe">Contact Me</a>
+  <a onclick = "ScrollWin()">Projects</a>
+  <a nclick = "ScrollFor()">Contact Me</a>
 </div>
 <style>
    <div> 
