--- a/aboutme.html
+++ b/aboutme.html
@@ -3,7 +3,8 @@
   <head>
     
   <title> About Me: Niki Shakouri</title>
-     <div class="topnav" id="myTopnav">
+     <div class="topnav" id="myTopnav">       
+ <b><h1 style="color:white;font-family:ariel;text-align:right;font-size:400%;">Niki Shakouri</h1></b>
   <a>Home</a>
   <a href="#biography">Biography</a>
   <a onclick = "ScrollWin()">Projects</a>
