--- a/aboutme.html
+++ b/aboutme.html
@@ -4,11 +4,13 @@
     
   <title> About Me: Niki Shakouri</title>
      <div class="topnav" id="myTopnav">       
- <b><h1 style="color:white;font-family:ariel;text-align:right;font-size:400%;">Niki Shakouri</h1></b>
+ 
   <a>Home</a>
   <a href="#biography">Biography</a>
   <a onclick = "ScrollWin()">Projects</a>
   <a nclick = "ScrollFor()">Contact Me</a>
+       <b><h1 style="color:white;font-family:verdana;text-align:right;font-size:1000%;">Niki 
+  Shakouri</h1></b>
 </div>
 <style>
    <div> 
