--- a/aboutme.html
+++ b/aboutme.html
@@ -9,7 +9,8 @@
   <a href="#biography">Biography</a>
   <a onclick = "ScrollWin()">Projects</a>
   <a nclick = "ScrollFor()">Contact Me</a>
-       <b><h1 style="color:white;font-family:verdana;text-align:right;font-size:1000%;">Niki 
+       <b><h1 style="color:white;font-family:cursive;text-align:right;font-size:1000%;">
+  Niki 
   Shakouri</h1></b>
 </div>
 <style>
