--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
   <a onclick = "ScrollWin()">Projects</a>
   <a nclick = "ScrollFor()">Contact Me</a>
        
-      <br><b><h1 style="color:white;font-family:cursive;text-align:right;font-size:1000%;">Niki<br>Shakouri</h1></b>
+      <br><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1000%;">Niki<br>Shakouri</h1></b>
 </div>
 <style>
    <div> 
