--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,9 @@
   <a onclick = "ScrollWin()">Projects</a>
   <a nclick = "ScrollFor()">Contact Me</a>
        
-      <br><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1100%;">Niki<br>Shakouri</h1></b>
+      <br><pre><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1100%;">
+      Niki
+      Shakouri</h1></b></pre>
 </div>
 <style>
    <div> 
