--- a/aboutme.html
+++ b/aboutme.html
@@ -9,10 +9,9 @@
   <a href="#biography">Biography</a>
   <a onclick = "ScrollWin()">Projects</a>
   <a nclick = "ScrollFor()">Contact Me</a>
-       
-      <br><pre><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1100%;">
-      Niki
-      Shakouri</h1></b></pre>
+       <pre><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1100%;">
+       Niki
+       Shakouri</h1></b></pre>
 </div>
 <style>
    <div> 
