--- a/aboutme.html
+++ b/aboutme.html
@@ -9,9 +9,7 @@
   <a href="#biography">Biography</a>
   <a onclick = "ScrollWin()">Projects</a>
   <a nclick = "ScrollFor()">Contact Me</a>
-       <pre><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1100%;">
-       Niki
-       Shakouri</h1></b></pre>
+       <br><b><h1 style="color:white;font-family:cursive;text-align:right;font-size:1100%;">Niki<br>Shakouri</h1></b></pre>
 </div>
 <style>
    <div> 
