--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
      <div class="topnav" id="myTopnav">       
  
   <a>Home</a>
-  <a href="ScrollA()">Biography</a>
+  <a onclick="ScrollA()">Biography</a>
   <a onclick = "ScrollWin()">Projects</a>
   <a nclick = "ScrollFor()">Contact Me</a>
        <br><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1100%;">Niki<br>Shakouri</h1></b></pre>
