--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
   <a>Home</a>
   <a onclick="ScrollA()">Biography</a>
   <a onclick = "ScrollWin()">Projects</a>
-  <a nclick = "ScrollFor()">Contact Me</a>
+  <a onclick = "ScrollFor()">Contact Me</a>
        <br><b><h1 style="color:white;font-family:cursive;text-align:center;font-size:1100%;">Niki<br>Shakouri</h1></b></pre>
 </div>
 <style>
@@ -56,12 +56,12 @@
       <center>
         <script>
           function ScrollA() {
-            window.scrollTo (0,1000);
+            window.scrollTo (0,750);
           }
         </script>
       <script>
         function ScrollWin() {
-          window.scrollTo (0, 2000);
+          window.scrollTo (0, 1500);
         }
               </script>
        <script>
