--- a/aboutme.html
+++ b/aboutme.html
@@ -40,7 +40,7 @@
     color: white;
 }
   body {
-         background: url(sunset2.jpg) no-repeat center center fixed;
+         background: url(paris.jpg) no-repeat center center fixed;
          background-size: cover;
          webkit-background-size: cover;
          -moz-background-size: cover;
@@ -56,12 +56,12 @@
       <center>
         <script>
           function ScrollA() {
-            window.scrollTo (0,750);
+            window.scrollTo (0,700);
           }
         </script>
       <script>
         function ScrollWin() {
-          window.scrollTo (0, 1500);
+          window.scrollTo (0, 1200);
         }
               </script>
        <script>
