--- a/aboutme.html
+++ b/aboutme.html
@@ -92,7 +92,7 @@
      <p style="color:white;font-family:ariel;font-size:150%;text-align:center;">
          Through the use of arduino and a basic knowledge of circuits, my team and I were able to complete a circuit that controlled LED lights, causing them to simultaneously turn on.</p>
      </tr>
-     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Contact Info</h1></b>
+     <b><h1 style="color:white;font-family:ariel;text-align:center;font-size:250%;">Contact Me</h1></b>
        <pre><p><center><a href="https://www.linkedin.com/in/niki-shakouri-5b7871141/" style="color:white;font-family:ariel;font-size:150%;">LinkedIn Profile</a></center>
       <center><a style="color:white;font-family:ariel;font-size:150%;">Email: nshakouri@yahoo.com</center></p>
     </pre>
